tests/errors/type-mismatch/main.pa
def main = 1 == "hello"
